# polling-application-cicd

.github/workflows/: deploy.yaml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/src/: handlers.rs  main.rs  mongodb_repository.rs  repositories.rs
backend/src/handlers/: poll.rs  user.rs  vote.rs  websocket.rs
backend/src/models/: mod.rs  poll.rs  user.rs  vote.rs
backend/src/utils/: db.rs  jwt.rs
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/_utils/: LogoutButton.tsx  Provider.tsx  Spinner.tsx  UserContext.tsx  nodeSdk.ts  useWebSocket.ts
frontend/app/components/: PollActions.tsx  PollOptions.tsx  PollQuestion.tsx  PollResultGraph.tsx  PollResults.tsx  PollStatistics.tsx
frontend/app/profile/: ClientDashboard.tsx  layout.tsx  page.tsx
frontend/app/profile/all-polls/: page.tsx
frontend/app/profile/all-polls/[poll_id]/: page.tsx
frontend/app/profile/create-poll/: page.tsx
frontend/app/profile/my-polls/: page.tsx
frontend/app/profile/my-votes/: page.tsx
