[package]
name = "fairpolling-backend"
version = "0.1.0"
edition = "2021"

[dependencies]  # or actix-web if preferred
mongodb = "3.1.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
dotenv = "0.15.0"  # For loading environment variables
tower = "0.5.1"
reqwest = { version = "0.12.8", features = ["json"] }
actix-web = "4.9.0"
serde_json = "1.0.132"
futures = "0.3.31"
actix-cors = "0.7.0"
chrono = { version = "0.4.38", features = ["serde"] }
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
actix = "0.13.5"
actix-web-actors = "4.3.0"
env_logger = "0.11.5"
actix-web-httpauth = "0.8.2"
futures-util = "0.3.31"
tokio-stream = "0.1.16"
uuid = "1.11.0"
async-trait = "0.1.83"
actix-ws = "0.3.0"
once_cell = "1.20.2"
